--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "autoprefixer": "^10.4.16",
