--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "lucide-react": "^0.463.0",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "@google/genai": "^1.41.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
