--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 
 {
-  "name": "def-velogames-dashboard",
+  "name": "liga-frikis-dashboard",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -21,9 +21,6 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "vite": "^5.0.0"
   }
 }
