--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,12 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "allowImportingTsExtensions": true
   },
-  "include": ["./index.tsx", "./App.tsx", "./components/**/*", "./types.ts", "./mockData.ts"]
+  "include": ["index.tsx", "App.tsx", "components/**/*", "types.ts", "mockData.ts"]
 }
