feat: Update dependencies and Vite config
Update import maps with newer versions of React, Recharts, and Lucide React.
Refactor Vite config to include Netlify API key injection.
Remove unnecessary type checking in tsconfig.json.
Adjust system instructions in CyclingAI component for conciseness and clarity.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "allowImportingTsExtensions": true
+    "jsx": "react-jsx"
   },
   "include": ["index.tsx", "App.tsx", "components/**/*", "types.ts", "mockData.ts"]
 }
